logs/output_ferro3.txt
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:53: UserWarning: train_data has been renamed data
  warnings.warn("train_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:58: UserWarning: test_data has been renamed data
  warnings.warn("test_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:43: UserWarning: train_labels has been renamed targets
  warnings.warn("train_labels has been renamed targets")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:48: UserWarning: test_labels has been renamed targets
  warnings.warn("test_labels has been renamed targets")
init done
{'quantization.global_wb': 3, 'inp_mult': 200, 'nb_hidden': 800, 'nb_steps': 150, 'batch_size': 128, 'quantization.global_lr': 0.0004, 'reg_size': 0.00048219502065459076, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=11.10463
Test accuracy: 0.114
Train accuracy: 0.110
Epoch 2: loss=7.01794
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 3: loss=7.76781
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 4: loss=9.76967
Test accuracy: 0.102
Train accuracy: 0.112
Epoch 5: loss=11.54389
Test accuracy: 0.114
Train accuracy: 0.111
Epoch 6: loss=12.88008
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 7: loss=13.74712
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 8: loss=14.29322
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 9: loss=14.61464
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 10: loss=14.73260
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 11: loss=14.74865
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 12: loss=14.76337
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 13: loss=14.78624
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 14: loss=14.79603
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 15: loss=14.80551
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 16: loss=14.82155
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 17: loss=14.83398
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 18: loss=14.84619
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 19: loss=14.84795
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 20: loss=14.84898
Test accuracy: 0.113
Train accuracy: 0.113
Epoch 21: loss=14.84983
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 22: loss=14.85119
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 23: loss=14.85230
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 24: loss=14.85294
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 25: loss=14.85447
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 26: loss=14.85457
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 27: loss=14.85566
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 28: loss=14.85632
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 29: loss=14.85638
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 30: loss=14.85654
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 31: loss=14.85660
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 32: loss=14.85671
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 33: loss=14.85682
Test accuracy: 0.113
Train accuracy: 0.112
Epoch 34: loss=14.85688
Test accuracy: 0.114
Train accuracy: 0.112
Epoch 35: loss=14.85697
Test accuracy: 0.113
Train accuracy: 0.112
{'quantization.global_wb': 3, 'inp_mult': 200, 'reg_size': 0.00048219502065459076, 'weight_sum': 0.01893358828808129}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
python: can't open file 'spytorch_dvs2_ferro.py': [Errno 2] No such file or directory
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
  File "spytorch_dvs2_ferrro.py", line 59
    print("hello")print("hello")
                      ^
SyntaxError: invalid syntax
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
init done
{'quantization.global_wb': 3, 'inp_mult': 200, 'nb_hidden': 4000, 'nb_steps': 150, 'batch_size': 64, 'quantization.global_lr': 1.5e-05, 'reg_size': 0.001, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=3070.45763
Test accuracy: 0.086
Train accuracy: 0.083
Epoch 2: loss=3065.62313
Test accuracy: 0.086
Train accuracy: 0.083
Epoch 3: loss=3060.82815
Test accuracy: 0.070
Train accuracy: 0.082
Epoch 4: loss=3056.03986
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 5: loss=3051.25844
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 6: loss=3046.49215
Test accuracy: 0.090
Train accuracy: 0.082
Epoch 7: loss=3041.72411
Test accuracy: 0.078
Train accuracy: 0.084
Epoch 8: loss=3036.97146
Test accuracy: 0.086
Train accuracy: 0.083
Epoch 9: loss=3032.23047
Test accuracy: 0.082
Train accuracy: 0.083
Epoch 10: loss=3029.51095
Test accuracy: 0.062
Train accuracy: 0.083
Epoch 11: loss=3029.03824
Test accuracy: 0.086
Train accuracy: 0.083
Epoch 12: loss=3028.56373
Test accuracy: 0.082
Train accuracy: 0.084
Epoch 13: loss=3028.09146
Test accuracy: 0.086
Train accuracy: 0.082
Epoch 14: loss=3027.61795
Test accuracy: 0.082
Train accuracy: 0.084
Epoch 15: loss=3027.14545
Test accuracy: 0.078
Train accuracy: 0.083
Epoch 16: loss=3026.67057
Test accuracy: 0.074
Train accuracy: 0.084
Epoch 17: loss=3026.19727
Test accuracy: 0.086
Train accuracy: 0.084
Epoch 18: loss=3025.72295
Test accuracy: 0.090
Train accuracy: 0.083
Epoch 19: loss=3025.45059
Test accuracy: 0.078
Train accuracy: 0.085
Epoch 20: loss=3025.40339
Test accuracy: 0.086
Train accuracy: 0.084
Epoch 21: loss=3025.35661
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 22: loss=3025.30866
Test accuracy: 0.090
Train accuracy: 0.083
Epoch 23: loss=3025.26073
Test accuracy: 0.090
Train accuracy: 0.082
Epoch 24: loss=3025.21354
Test accuracy: 0.078
Train accuracy: 0.083
Epoch 25: loss=3025.16618
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 26: loss=3025.11877
Test accuracy: 0.090
Train accuracy: 0.082
Epoch 27: loss=3025.07155
Test accuracy: 0.070
Train accuracy: 0.082
Epoch 28: loss=3025.04384
Test accuracy: 0.078
Train accuracy: 0.083
Epoch 29: loss=3025.03974
Test accuracy: 0.082
Train accuracy: 0.085
Epoch 30: loss=3025.03666
Test accuracy: 0.090
Train accuracy: 0.083
Epoch 31: loss=3025.03436
Test accuracy: 0.090
Train accuracy: 0.082
Epoch 32: loss=3025.02942
Test accuracy: 0.090
Train accuracy: 0.085
Epoch 33: loss=3025.02652
Test accuracy: 0.074
Train accuracy: 0.082
Epoch 34: loss=3025.02249
Test accuracy: 0.086
Train accuracy: 0.082
Epoch 35: loss=3025.01843
Test accuracy: 0.086
Train accuracy: 0.084
{'quantization.global_wb': 3, 'inp_mult': 200, 'reg_size': 0.001, 'weight_sum': 1.12}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
init done
{'quantization.global_wb': 3, 'inp_mult': 200, 'nb_hidden': 4000, 'nb_steps': 100, 'batch_size': 64, 'quantization.global_lr': 1.5e-05, 'reg_size': 0.00024603830525241836, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=757.40182
Test accuracy: 0.074
Train accuracy: 0.083
Epoch 2: loss=756.29290
Test accuracy: 0.078
Train accuracy: 0.082
Epoch 3: loss=755.18536
Test accuracy: 0.082
Train accuracy: 0.083
Epoch 4: loss=754.08592
Test accuracy: 0.070
Train accuracy: 0.083
Epoch 5: loss=752.98899
Test accuracy: 0.070
Train accuracy: 0.069
Epoch 6: loss=751.89345
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 7: loss=750.79954
Test accuracy: 0.082
Train accuracy: 0.083
Epoch 8: loss=749.70729
Test accuracy: 0.086
Train accuracy: 0.083
Epoch 9: loss=748.61658
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 10: loss=747.98966
Test accuracy: 0.090
Train accuracy: 0.082
Epoch 11: loss=747.88142
Test accuracy: 0.086
Train accuracy: 0.083
Epoch 12: loss=747.77320
Test accuracy: 0.086
Train accuracy: 0.082
Epoch 13: loss=747.66352
Test accuracy: 0.086
Train accuracy: 0.084
Epoch 14: loss=747.55467
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 15: loss=747.44667
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 16: loss=747.33784
Test accuracy: 0.082
Train accuracy: 0.083
Epoch 17: loss=747.22935
Test accuracy: 0.078
Train accuracy: 0.081
Epoch 18: loss=747.12064
Test accuracy: 0.078
Train accuracy: 0.083
Epoch 19: loss=747.05841
Test accuracy: 0.086
Train accuracy: 0.082
Epoch 20: loss=747.04665
Test accuracy: 0.078
Train accuracy: 0.084
Epoch 21: loss=747.03611
Test accuracy: 0.082
Train accuracy: 0.084
Epoch 22: loss=747.02472
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 23: loss=747.01386
Test accuracy: 0.094
Train accuracy: 0.084
Epoch 24: loss=747.00288
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 25: loss=746.99173
Test accuracy: 0.086
Train accuracy: 0.083
Epoch 26: loss=746.98124
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 27: loss=746.97079
Test accuracy: 0.086
Train accuracy: 0.080
Epoch 28: loss=746.96325
Test accuracy: 0.082
Train accuracy: 0.083
Epoch 29: loss=746.96303
Test accuracy: 0.078
Train accuracy: 0.083
Epoch 30: loss=746.96263
Test accuracy: 0.086
Train accuracy: 0.081
Epoch 31: loss=746.96175
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 32: loss=746.96208
Test accuracy: 0.082
Train accuracy: 0.079
Epoch 33: loss=746.96034
Test accuracy: 0.082
Train accuracy: 0.081
Epoch 34: loss=746.95974
Test accuracy: 0.082
Train accuracy: 0.082
Epoch 35: loss=746.95868
Test accuracy: 0.086
Train accuracy: 0.081
{'quantization.global_wb': 3, 'inp_mult': 200, 'reg_size': 0.00024603830525241836, 'weight_sum': 0.8960000000000001}
